<resources>
    <string name="app_name">mycalculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="ln">Ln</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ac">AC</string>
    <string name="x">x</string>
    <string name="sign_subtract">-</string>
    <string name="sing_add">+</string>
    <string name="change_sign">+/-</string>
    <string name="sign_dot">.</string>
    <string name="sign_equals">=</string>
    <string name="sign_divide">÷</string>
    <string name="sign_modulo">%</string>
    <string name="sqrt">sqrt</string>
    <string name="log">log</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="xton">xⁿ</string>
    <string name="xto2">x²</string>
    <string name="kappa">kappa</string>
    <string name="sometextaboutme">*sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    *sample text**sample text**sample text**sample text**sample text*
    </string>
    <string name="creatorname">Author: Antoni Urbaniak</string>
    <string name="me">Me</string>
    <string name="advanced_calculator">Advanced Calculator</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="leave_app">EXIT</string>
</resources>
