<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_simple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentBottom="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/table"
        android:fillViewport="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DCDCDC"

            android:freezesText="true"

            android:gravity="bottom|right"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            android:text="@string/_0"
            android:textSize="42sp" />
    <!--android:maxLength="15"-->
    <!--android:textDirection="rtl"-->
    </ScrollView>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D0D0D0"
        android:layout_alignParentBottom="true">


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_AC"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickClear"
                android:text="@string/ac"
                android:textColor="#FFC02E"
                android:textSize="21sp" />

            <ImageButton
                android:id="@+id/button_C"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:background="#F3F3F3"
                android:maxHeight="70dp"
                android:minHeight="70dp"
                android:onClick="onClickDelete"
                android:tint="@android:color/holo_orange_dark"
                app:srcCompat="@android:drawable/ic_input_delete" />

            <Button
                android:id="@+id/button_percent"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickPercent"
                android:text="@string/sign_modulo"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button_divide"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickOperator"
                android:text="@string/sign_divide"
                android:textSize="21sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button14"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_7"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button15"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_8"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button16"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_9"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickOperator"
                android:text="@string/x"
                android:textSize="21sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button18"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_4"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button19"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_5"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button20"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_6"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button_subtract"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickOperator"
                android:text="@string/sign_subtract"
                android:textSize="21sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button22"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_1"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button23"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_2"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button24"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_3"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button_add"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickOperator"
                android:text="@string/sing_add"
                android:textSize="21sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_sign"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickSignChange"
                android:text="@string/change_sign"
                android:textColor="#FFC02E"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button27"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickNumber"
                android:text="@string/_0"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button28"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#F3F3F3"
                android:onClick="onClickDot"
                android:text="@string/sign_dot"
                android:textSize="21sp" />

            <Button
                android:id="@+id/button_equals"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_margin="1px"
                android:layout_weight="1"
                android:height="70dp"
                android:background="#FFA40A"
                android:onClick="onClickEqual"
                android:text="@string/sign_equals"
                android:textColor="@android:color/white"
                android:textSize="21sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>